--- a/src/sass/_sections.scss
+++ b/src/sass/_sections.scss
@@ -45,6 +45,7 @@ section {
 blockquote {
   --t: rgba(255, 255, 255, 0);
 
+  z-index: 1;
   transform: translateY(50%);
   opacity: 0;
   transition: all 220ms 400ms ease-in;
